# scheduler-TEST-

./: .flake8  README.md  pyproject.toml
docs/: usage_instruction.md
src/: scheduler.py  settings.py
tests/: conftest.py  test_api.py  test_scheduler.py  test_scheduler_exceptions.py
tests/fixtures/: api_response.json
